# tree-sitter-edgeql

./: .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-edgeql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
grammar/: builtins.js  expressions.js  helpers.js  keywords.js  literals.js  names.js  statements.js  types.js
queries/: config.toml  highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: _custom01.txt  _custom02.txt  atom01.txt  builtins01.txt  builtins02.txt  builtins03.txt  bytes01.txt  bytes02.txt  call01.txt  cast01.txt  cast02.txt  cast03.txt  cast04.txt  constraint01.txt  constraint02.txt  constraint03.txt  constraint04.txt  create01.txt  create02.txt  create03.txt  create04.txt  create05.txt  ddl_function01.txt  delete01.txt  delete02.txt  for01.txt  for02.txt  function01.txt  function02.txt  function03.txt  group01.txt  group02.txt  ident01.txt  ident02.txt  import01.txt  insert01.txt  insert02.txt  insert03.txt  keywords01.txt  keywords02.txt  (+35 more)
test/highlight/: _custom01.edgeql  _custom02.edgeql  atom01.edgeql  builtins01.edgeql  builtins02.edgeql  builtins03.edgeql  bytes01.edgeql  bytes02.edgeql  call01.edgeql  cast01.edgeql  cast02.edgeql  cast03.edgeql  cast04.edgeql  constraint01.edgeql  constraint02.edgeql  constraint03.edgeql  constraint04.edgeql  create01.edgeql  create02.edgeql  (+56 more)
(+5 files in other folders)
