[package]
name = "tree-sitter-edgeql"
description = "The query language for the Gel database (formerly known as EdgeDB)"
version = "0.1.0"
authors = ["illright"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "edgeql"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/illright/tree-sitter-edgeql"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
