[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-edgeql"
description = "The query language for the Gel database (formerly known as EdgeDB)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "edgeql"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "illright" }]
requires-python = ">=3.10"
license.text = "GPL-3.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/illright/tree-sitter-edgeql"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
